@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.0.1"
+  "version": "3.2.0.2"
 }
