@@ -98,6 +98,7 @@
     "*://*.bnd.com/*",
     "*://*.bndestem.nl/*",
     "*://*.bnn.de/*",
+    "*://*.boersen-zeitung.de/*",
     "*://*.bonappetit.com/*",
     "*://*.bordermail.com.au/*",
     "*://*.bostonglobe.com/*",
@@ -742,5 +743,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.0.1"
+  "version": "3.2.0.2"
 }
