@@ -2,6 +2,7 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add Boersen-zeitung.de
 Fix ESPN USA
 
 * v3.2.0.0 (2023-05-29)
